# projetao

./: .gitignore  LICENSE  README.md
backend/: .env.template  package-lock.json  package.json  tsconfig.json
backend/src/: environment.d.ts  index.ts
backend/src/@types/: index.ts
backend/src/utils/: index.ts
esp32/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32/components/flash/: CMakeLists.txt  Kconfig.projbuild  flash.c
esp32/components/flash/include/: flash.h
esp32/components/http/: CMakeLists.txt  http.c
esp32/components/http/include/: http.h
esp32/components/infrared/: CMakeLists.txt  infrared.c
esp32/components/infrared/include/: infrared.h
esp32/components/wifi/: CMakeLists.txt  wifi_lib.c
esp32/components/wifi/include/: wifi_lib.h
esp32/main/: CMakeLists.txt  main.c
esp32/main/include/: main.h
frontend/: .env.default  index.html  package-lock.json  package.json  prettier.config.js  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  Router.tsx  main.tsx
frontend/src/@types/: index.ts
frontend/src/components/Footer/: index.tsx
frontend/src/components/Navbar/: index.tsx  types.ts
frontend/src/constants/: index.ts  paths.ts
frontend/src/pages/: Default.tsx
frontend/src/pages/Home/: index.tsx
frontend/src/pages/Map/: index.tsx
frontend/src/pages/Poll/: index.tsx
frontend/src/pages/Suggestion/: index.tsx
frontend/src/service/: api.ts
frontend/src/styles/: tailwind.css
frontend/src/utils/: icons.tsx  index.ts
